@@ -1541,8 +1541,8 @@ node *do_overstrike()
 {
   overstrike_node *on = new overstrike_node;
   int start_level = input_stack::get_level();
-  token start;
-  start.next();
+  token start_token;
+  start_token.next();
   for (;;) {
     tok.next();
     if (tok.is_newline()) {
@@ -1556,7 +1556,7 @@ node *do_overstrike()
       input_stack::push(make_temp_iterator("\n"));
       break;
     }
-    if (tok == start
+    if (tok == start_token
 	&& (compatible_flag || input_stack::get_level() == start_level))
       break;
     if (tok.is_horizontal_space())
@@ -1583,8 +1583,8 @@ static node *do_bracket()
 {
   bracket_node *bn = new bracket_node;
   int start_level = input_stack::get_level();
-  token start;
-  start.next();
+  token start_token;
+  start_token.next();
   for (;;) {
     tok.next();
     if (tok.is_newline()) {
@@ -1599,7 +1599,7 @@ static node *do_bracket()
       input_stack::push(make_temp_iterator("\n"));
       break;
     }
-    if (tok == start
+    if (tok == start_token
 	&& (compatible_flag || input_stack::get_level() == start_level))
       break;
     charinfo *ci = tok.get_char(true /* required */);
@@ -1615,14 +1615,14 @@ static node *do_bracket()
 static int do_name_test()
 {
   int start_level = input_stack::get_level();
-  token start;
-  start.next();
+  token start_token;
+  start_token.next();
   bool got_bad_char = false;
   bool got_some_char = false;
   for (;;) {
     tok.next();
     if (tok.is_newline() || tok.is_eof()) {
-      if (tok != start)
+      if (tok != start_token)
 	warning(WARN_DELIM, "missing closing delimiter in identifier"
 		" validation escape sequence (got %1)",
 		tok.description());
@@ -1630,7 +1630,7 @@ static int do_name_test()
       input_stack::push(make_temp_iterator("\n"));
       break;
     }
-    if (tok == start
+    if (tok == start_token
 	&& (compatible_flag || input_stack::get_level() == start_level))
       break;
     if (!tok.ch())
@@ -1642,10 +1642,10 @@ static int do_name_test()
 
 static int do_expr_test()
 {
-  token start;
-  start.next();
+  token start_token;
+  start_token.next();
   int start_level = input_stack::get_level();
-  if (!start.is_usable_as_delimiter(true /* report error */))
+  if (!start_token.is_usable_as_delimiter(true /* report error */))
     return 0;
   tok.next();
   // disable all warning and error messages temporarily
@@ -1657,7 +1657,7 @@ static int do_expr_test()
   int result = get_number_rigidly(&dummy, 'u');
   warning_mask = saved_warning_mask;
   inhibit_errors = saved_inhibit_errors;
-  if (tok == start && input_stack::get_level() == start_level)
+  if (tok == start_token && input_stack::get_level() == start_level)
     return result;
   // ignore everything up to the delimiter in case we aren't right there
   for (;;) {
@@ -1669,7 +1669,7 @@ static int do_expr_test()
       input_stack::push(make_temp_iterator("\n"));
       break;
     }
-    if (tok == start && input_stack::get_level() == start_level)
+    if (tok == start_token && input_stack::get_level() == start_level)
       break;
   }
   return 0;
@@ -1678,8 +1678,8 @@ static int do_expr_test()
 #if 0
 static node *do_zero_width()
 {
-  token start;
-  start.next();
+  token start_token;
+  start_token.next();
   int start_level = input_stack::get_level();
   environment env(curenv);
   environment *oldenv = curenv;
@@ -1690,7 +1690,7 @@ static node *do_zero_width()
       error("missing closing delimiter");
       break;
     }
-    if (tok == start
+    if (tok == start_token
 	&& (compatible_flag || input_stack::get_level() == start_level))
       break;
     tok.process();
@@ -1716,12 +1716,12 @@ static node *do_zero_width()
 {
   node *rev = new dummy_node;
   int start_level = input_stack::get_level();
-  token start;
-  start.next();
+  token start_token;
+  start_token.next();
   for (;;) {
     tok.next();
     if (tok.is_newline() || tok.is_eof()) {
-      if (tok != start)
+      if (tok != start_token)
 	warning(WARN_DELIM, "missing closing delimiter in"
 		" zero-width escape sequence (got %1)",
 		tok.description());
@@ -1729,7 +1729,7 @@ static node *do_zero_width()
       input_stack::push(make_temp_iterator("\n"));
       break;
     }
-    if (tok == start
+    if (tok == start_token
 	&& (compatible_flag || input_stack::get_level() == start_level))
       break;
     if (!tok.add_to_zero_width_node_list(&rev))
@@ -5129,12 +5129,12 @@ static void interpolate_number_format(symbol nm)
 
 static int get_delim_number(units *n, unsigned char si, int prev_value)
 {
-  token start;
-  start.next();
-  if (start.is_usable_as_delimiter(true /* report error */)) {
+  token start_token;
+  start_token.next();
+  if (start_token.is_usable_as_delimiter(true /* report error */)) {
     tok.next();
     if (get_number(n, si, prev_value)) {
-      if (start != tok)
+      if (start_token != tok)
 	warning(WARN_DELIM, "closing delimiter does not match");
       return 1;
     }
@@ -5144,12 +5144,12 @@ static int get_delim_number(units *n, unsigned char si, int prev_value)
 
 static int get_delim_number(units *n, unsigned char si)
 {
-  token start;
-  start.next();
-  if (start.is_usable_as_delimiter(true /* report error */)) {
+  token start_token;
+  start_token.next();
+  if (start_token.is_usable_as_delimiter(true /* report error */)) {
     tok.next();
     if (get_number(n, si)) {
-      if (start != tok)
+      if (start_token != tok)
 	warning(WARN_DELIM, "closing delimiter does not match");
       return 1;
     }
@@ -5159,20 +5159,22 @@ static int get_delim_number(units *n, unsigned char si)
 
 static int get_line_arg(units *n, unsigned char si, charinfo **cp)
 {
-  token start;
-  start.next();
+  token start_token;
+  start_token.next();
   int start_level = input_stack::get_level();
-  if (!start.is_usable_as_delimiter(true /* report error */))
+  if (!start_token.is_usable_as_delimiter(true /* report error */))
     return 0;
   tok.next();
   if (get_number(n, si)) {
     if (tok.is_dummy() || tok.is_transparent_dummy())
       tok.next();
-    if (!(start == tok && input_stack::get_level() == start_level)) {
+    if (!(start_token == tok
+	  && input_stack::get_level() == start_level)) {
       *cp = tok.get_char(true /* required */);
       tok.next();
     }
-    if (!(start == tok && input_stack::get_level() == start_level))
+    if (!(start_token == tok
+	  && input_stack::get_level() == start_level))
       warning(WARN_DELIM, "closing delimiter does not match");
     return 1;
   }
@@ -5302,13 +5304,13 @@ static bool read_size(int *x)
 
 static symbol get_delim_name()
 {
-  token start;
-  start.next();
-  if (start.is_eof()) {
+  token start_token;
+  start_token.next();
+  if (start_token.is_eof()) {
     error("end of input at start of delimited name");
     return NULL_SYMBOL;
   }
-  if (start.is_newline()) {
+  if (start_token.is_newline()) {
     error("can't delimit name with a newline");
     return NULL_SYMBOL;
   }
@@ -5333,7 +5335,7 @@ static symbol get_delim_name()
       }
     }
     tok.next();
-    if (tok == start
+    if (tok == start_token
 	&& (compatible_flag || input_stack::get_level() == start_level))
       break;
     if ((buf[i] = tok.ch()) == 0) {
@@ -5364,9 +5366,9 @@ static symbol get_delim_name()
 
 static void do_register()
 {
-  token start;
-  start.next();
-  if (!start.is_usable_as_delimiter(true /* report error */))
+  token start_token;
+  start_token.next();
+  if (!start_token.is_usable_as_delimiter(true /* report error */))
     return;
   tok.next();
   symbol nm = get_long_name(true /* required */);
@@ -5381,7 +5383,7 @@ static void do_register()
   int val;
   if (!get_number(&val, 'u', prev_value))
     return;
-  if (start != tok)
+  if (start_token != tok)
     warning(WARN_DELIM, "closing delimiter does not match");
   if (r)
     r->set_value(val);
@@ -5394,15 +5396,15 @@ static void do_register()
 static void do_width()
 {
   int start_level = input_stack::get_level();
-  token start;
-  start.next();
+  token start_token;
+  start_token.next();
   environment env(curenv);
   environment *oldenv = curenv;
   curenv = &env;
   for (;;) {
     tok.next();
     if (tok.is_newline() || tok.is_eof()) {
-      if (tok != start)
+      if (tok != start_token)
 	warning(WARN_DELIM, "missing closing delimiter in"
 		" width computation escape sequence (got %1)",
 		tok.description());
@@ -5410,7 +5412,7 @@ static void do_width()
       input_stack::push(make_temp_iterator("\n"));
       break;
     }
-    if (tok == start
+    if (tok == start_token
 	&& (compatible_flag || input_stack::get_level() == start_level))
       break;
     tok.process();
@@ -5609,8 +5611,8 @@ static void encode_char(macro *mac, char c)
 static node *do_special()
 {
   int start_level = input_stack::get_level();
-  token start;
-  start.next();
+  token start_token;
+  start_token.next();
   macro mac;
   for (;;) {
     tok.next();
@@ -5625,7 +5627,7 @@ static node *do_special()
       input_stack::push(make_temp_iterator("\n"));
       break;
     }
-    if (tok == start
+    if (tok == start_token
 	&& (compatible_flag || input_stack::get_level() == start_level))
       break;
     unsigned char c;
@@ -8682,21 +8684,21 @@ node *charinfo_to_node_list(charinfo *ci, const environment *envp)
 
 static node *read_draw_node()
 {
-  token start;
-  start.next();
-  if (!start.is_usable_as_delimiter(true /* report error */)){
+  token start_token;
+  start_token.next();
+  if (!start_token.is_usable_as_delimiter(true /* report error */)){
     do {
       tok.next();
-    } while (tok != start && !tok.is_newline() && !tok.is_eof());
+    } while (tok != start_token && !tok.is_newline() && !tok.is_eof());
   }
   else {
     tok.next();
-    if (tok == start)
+    if (tok == start_token)
       error("missing argument");
     else {
       unsigned char type = tok.ch();
       if (type == 'F') {
-	read_color_draw_node(start);
+	read_color_draw_node(start_token);
 	return 0;
       }
       tok.next();
@@ -8706,7 +8708,7 @@ static node *read_draw_node()
       int no_last_v = 0;
       bool err = false;
       int i;
-      for (i = 0; tok != start; i++) {
+      for (i = 0; tok != start_token; i++) {
 	if (i == maxpoints) {
 	  hvpair *oldpoint = point;
 	  point = new hvpair[maxpoints*2];
@@ -8729,7 +8731,7 @@ static node *read_draw_node()
 	++npoints;
 	tok.skip();
 	point[i].v = V0;
-	if (tok == start) {
+	if (tok == start_token) {
 	  no_last_v = 1;
 	  break;
 	}
@@ -8739,7 +8741,7 @@ static node *read_draw_node()
 	}
 	tok.skip();
       }
-      while (tok != start && !tok.is_newline() && !tok.is_eof())
+      while (tok != start_token && !tok.is_newline() && !tok.is_eof())
 	tok.next();
       if (!err) {
 	switch (type) {
